@@ -799,7 +799,8 @@ let modtype_of_package env loc p nl tl =
       if nl = [] then Mty_ident p
       else raise(Error(loc, Signature_expected))
   with Not_found ->
-    raise(Typetexp.Error(loc, Typetexp.Unbound_modtype (Ctype.lid_of_path p)))
+    let error = Typetexp.Unbound_modtype (env, Ctype.lid_of_path p) in
+    raise(Typetexp.Error(loc, error))
 
 let wrap_constraint env arg mty explicit =
   let coercion =
