@@ -4,6 +4,7 @@ Next version
 Compilers:
 - PR#5634: parsetree rewriter (-ppx flag)
 - ocamldep now supports -absname
+- PR#5768: On "unbound identifier" errors, use spell-checking to suggest names present in the environment
 
 Bug fixes:
 - PR#4762: ?? is not used at all, but registered as a lexer token
